[package]
name = "apollo-tracing-protobuf"
version = "0.1.0"
authors = ["Anthony Griffon <an.griffon@gmail.com>"]
description = "A simple lib which expose generated rust file from Apollo Tracing protobuf configuration"
homepage = "https://github.com/Miaxos/apollo-tracing-protobuf-rs"
readme = "README.md"
repository = "https://github.com/Miaxos/apollo-tracing-protobuf-rs"
documentation = "https://github.com/Miaxos/apollo-tracing-protobuf-rs"
license = "MIT"
keywords = ["apollo", "tracing", "graphql", "protobuf", "grpc"]
categories = ["data-structures"]
edition = "2018"

[lib]
path = "generated/tracing.rs"
doc = true

[dependencies]
protobuf = "2.18.0"
